--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     const pacman=document.getElementById("pacman");
    
-    const pacmanImages=["./pacman1.jpg","./pacman2.jpg"]
-    const pacmanImages1=["./pacman3.jpg","./pacman4.jpg"]
+    const pacmanImages=["./images/pacman1.jpg","./images/pacman2.jpg"]
+    const pacmanImages1=["./images/pacman3.jpg","./images/pacman4.jpg"]
     let current_index=0;        
     let position=0;
     let direction=1;
